--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.0.1",
+    "jspdf": "^1.5.3",
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-bootstrap-icons": "^1.10.2",
@@ -18,7 +19,9 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-multilevel-menu": "^1.3.0",
+    "react-pdf": "^6.2.2",
     "react-scripts": "5.0.1",
+    "react-to-pdf": "^0.0.14",
     "reactjs-popup": "^2.0.5",
     "victory": "^36.6.8",
     "web-vitals": "^2.1.4"
